[gd_scene load_steps=9 format=3 uid="uid://5j3nkd57dwpk"]

[ext_resource type="Script" path="res://scenes/game/game_scene.gd" id="1_x51h5"]
[ext_resource type="Script" path="res://scripts/prototype/placement_grid.gd" id="1_xpw66"]
[ext_resource type="PackedScene" uid="uid://depdfa24xcvji" path="res://scenes/prototype/tile.tscn" id="2_aevgb"]
[ext_resource type="Script" path="res://scripts/prototype/grid_movement_controller.gd" id="3_usuh6"]
[ext_resource type="PackedScene" uid="uid://dfxnn5sgl8knh" path="res://scenes/player/player.tscn" id="5_sok4i"]
[ext_resource type="PackedScene" uid="uid://xiiuhs2xgxi5" path="res://scenes/gameplay/metronome.tscn" id="6_ud3em"]
[ext_resource type="PackedScene" uid="uid://c02g2aiybdtkw" path="res://scenes/game/background.tscn" id="7_jw0xs"]

[sub_resource type="Environment" id="Environment_f4h1w"]
background_mode = 1
background_color = Color(0.184314, 0, 0, 1)
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 0.2
tonemap_mode = 2
fog_enabled = true
fog_mode = 1
fog_light_color = Color(0.184314, 0, 0, 1)
fog_density = 0.0
fog_height = -0.5
fog_height_density = 3.0
fog_depth_curve = 1.56917
fog_depth_begin = 5.0
fog_depth_end = 12.0

[node name="GameScene" type="Node3D"]
process_mode = 1
script = ExtResource("1_x51h5")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_f4h1w")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.474924, 0.68513, 0.552309, -0.729416, -0.044657, 0.682612, 0.492342, -0.727051, 0.478536, 0.226314, -2.38419e-07, 0.159626)
light_energy = 0.35
shadow_enabled = true
directional_shadow_mode = 0
directional_shadow_fade_start = 1.0
directional_shadow_max_distance = 12.0

[node name="Camera3D" type="Camera3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.809017, 0.587785, 0, -0.587785, 0.809017, 0, 4.44, 4.1)
current = true
fov = 35.0
size = 5.0

[node name="Background" parent="Camera3D" instance=ExtResource("7_jw0xs")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.809017, -0.587785, 0, 0.587785, 0.809017, 0, -0.332648, -5.30956)

[node name="TileGrid" type="Node3D" parent="."]
unique_name_in_owner = true
script = ExtResource("1_xpw66")
tile_scene = ExtResource("2_aevgb")

[node name="InputController" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_usuh6")

[node name="Player" parent="." instance=ExtResource("5_sok4i")]
unique_name_in_owner = true

[node name="Metronome" parent="." instance=ExtResource("6_ud3em")]
bpm = 80.0
sfx_on = false

[connection signal="on_bar_start" from="Metronome" to="." method="add_row"]
[connection signal="on_pulse" from="Metronome" to="TileGrid" method="animate_predrawn_cell"]
